--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@
   object-fit: cover;
   position: absolute;
   inset: 0;
-  z-index: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
 
 header {
