--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
 
 .bg-image {
